--- a/www/templates/tab-calculator.html
+++ b/www/templates/tab-calculator.html
@@ -16,10 +16,18 @@
                 </h1>
               </div>
              <div class="col no_pad">
-                <div class="small_score" style="padding: 0px; margin: 0px;">{{data.runScore}}</div>
-                <div class="small_score"style="padding: 0px; margin: 0px;">{{data.bodyCompScore}}</div>
-                <div class="small_score" style="padding: 0px; margin: 0px;">{{data.pushupScore}}</div>
-                <div class="small_score_b" style="padding: 0px; margin: 0px;">{{data.situpScore}}</div>
+                <div class="small_score"
+                     ng-class="{exempt: data.settings.runExempt==true}"
+                     style="padding: 0px; margin: 0px;">{{data.runScore}}</div>
+                <div class="small_score"
+                     ng-class="{exempt: data.settings.bodyCompExempt==true}"
+                     style="padding: 0px; margin: 0px;">{{data.bodyCompScore}}</div>
+                <div class="small_score"
+                     ng-class="{exempt: data.settings.pushupsExempt==true}" 
+                     style="padding: 0px; margin: 0px;">{{data.pushupScore}}</div>
+                <div class="small_score_b" 
+                     ng-class="{exempt: data.settings.situpsExempt==true}" 
+                     style="padding: 0px; margin: 0px;">{{data.situpScore}}</div>
              </div>
           </div>
         </div>
@@ -66,36 +74,31 @@
         />
     <i class="icon ion-sad"></i> 
   </div>
-  <div>Run time: {{data.runTime}} / max: {{data.minMax.cardio.min}}</div>
+  <div>Run time: {{data.runTime}} / max: {{data.minMax.cardio.displayMax}}</div>
 </span>
-  <div ng-show="data.settings.runExempt">
-    <h3> Run Exempt </h3>
-  </div>
-   
-  <div 
-      class="item range range-positive"
-      ng-hide="data.settings.bodyCompExempt">
+<span ng-hide="data.settings.bodyCompExempt">
+  <div class="item range range-positive">
     <i class="icon ion-ribbon-a"></i>
     <input type="range" name="bodyComp" min="0" max="40" value="10" ng-model="data.bodyCompSlider">
     <i class="icon ion-sad"></i> 
   </div>
   <div>Body Comp: {{data.bodyComp}}</div>
-  <div 
-      class="item range range-positive"
-      ng-hide="data.settings.pushupsExempt">
+</span>
+  <span ng-hide="data.settings.pushupsExempt">
+  <div class="item range range-positive">
      <i class="icon ion-sad"></i> 
     <input type="range" name="pushUp" min="{{data.minMax.pushups.min}}" max="{{data.minMax.pushups.max}}" value="10" ng-model="data.pushUpSlider">
     <i class="icon ion-ribbon-a"></i>
   </div>
   <div>Push Ups: {{data.pushUpSlider}} || max: {{data.minMax.pushups.max}} || min:{{data.minMax.pushups.min}} </div>
-  <div 
-    class="item range range-positive"
-    ng-hide="data.settings.situpsExempt">
-    <i class="icon ion-sad"></i> 
-    <input type="range" name="sitUp" min="{{data.minMax.situps.min}}" max="{{data.minMax.situps.max}}" value="10" ng-model="data.sitUpSlider">
-    <i class="icon ion-ribbon-a"></i>
-  </div>
-  <div>Sit Ups: {{data.sitUpSlider}} || max: {{data.minMax.situps.max}} || min:{{data.minMax.situps.min}} </div>
-
+  </span>
+  <span ng-hide="data.settings.situpsExempt">
+    <div class="item range range-positive">
+      <i class="icon ion-sad"></i> 
+      <input type="range" name="sitUp" min="{{data.minMax.situps.min}}" max="{{data.minMax.situps.max}}" value="10" ng-model="data.sitUpSlider">
+      <i class="icon ion-ribbon-a"></i>
+    </div>
+    <div>Sit Ups: {{data.sitUpSlider}} || max: {{data.minMax.situps.max}} || min:{{data.minMax.situps.min}} </div>
+  </span>
   </ion-content>
 </ion-view>
